# sams2

./: Makefile.am  configure.in  upgrade_mysql_db.sh
debian/: changelog  control  copyright  init.d  rules  sams2-doc.confiles  sams2-doc.install  sams2-doc.postinst  sams2-doc.postrm  sams2-doc.prerm  sams2-web.install  sams2-web.postinst  sams2-web.postrm  sams2-web.prerm  sams2.default  sams2.docs  sams2.init  sams2.install  sams2.logrotate  sams2.postinst  sams2.postrm  sams2.prerm
debian/etc/: doc4sams2.conf  sams2-doc.conf  sams2-rsyslog.conf  sams2-web.conf  sams2.conf
debian/patches/: fix_squid_directories.patch  httpd_m4.patch  lang_EN.patch  php-mysql_to_php-mysqli.patch  plugins_fix.patch  redirect_squid34.patch  restore_missing_docs.patch  sams2conf.patch  series  tags_squid34.patch  use_local_docs.patch
etc/: httpd2.4_conf  sams2.conf
m4/: httpd.m4  pq.m4
php/: Makefile.am  setup.php
spec/: sams2.spec
src/: datefilter.cpp  net.cpp
